--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ version: 1.0.{build}
 branches:
   only:
   - master
-image: Visual Studio 2019 Preview
+image: Visual Studio 2019
 configuration:
 - Debug
 - Release
