update moonp and android build.

--- a/Project/Android/app/build.gradle
+++ b/Project/Android/app/build.gradle
@@ -34,13 +34,18 @@ android {
 			jniLibs.srcDirs = ['src/main/cpp/3rdParty/SDL2/Lib/Android', 'src/main/cpp/3rdParty/BGFX/Lib/Android']
 		}
 	}
+	compileOptions {
+		sourceCompatibility = 1.8
+		targetCompatibility = 1.8
+	}
+	buildToolsVersion = '30.0.0 rc1'
 }
 
 dependencies {
 	implementation fileTree(include: ['*.jar'], dir: 'libs')
-	androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+	androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
 		exclude group: 'com.android.support', module: 'support-annotations'
 	})
 	implementation 'com.android.support:appcompat-v7:26.1.0'
-	testImplementation 'junit:junit:4.12'
+	testImplementation 'junit:junit:4.13'
 }
