--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
     components:
       - tools
       - platform-tools
-      - build-tools-30.0.0-rc1
+      - build-tools-29.0.3
       - android-26
       - extra-google-m2repository
       - extra-android-m2repository
